feat(shim): add glibc detection and musl fallback; env overrides (PYBUN_PYPI_TARGET, PYBUN_PYPI_PREFER_MUSL); manifest compat hints; build GNU on Ubuntu 20.04 for GLIBC 2.31 baseline

--- a/examples/PyBun_Quick_Start.ipynb
+++ b/examples/PyBun_Quick_Start.ipynb
@@ -46,7 +46,13 @@
         "\n",
         "PyBunは `pip` で簡単にインストールできます。\n",
         "\n",
-        "> **Note**: PATHで `pybun` が [Bun](https://bun.sh) に解決される場合は、`pybun-cli` コマンドを使用してください。"
+        "> **Note**: PATHで `pybun` が [Bun](https://bun.sh) に解決される場合は、`pybun-cli` コマンドを使用してください。\n",
+        "\n",
+        "### 💡 Colab / 制限された環境での注意\n",
+        "Google Colabなど、署名検証ツール (`minisign`) がインストールされていない環境では、以下の環境変数を設定してインストールしてください。\n",
+        "```python\n",
+        "%env PYBUN_PYPI_NO_VERIFY=1\n",
+        "```"
       ]
     },
     {
@@ -55,6 +61,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# 署名検証をスキップしてインストール（minisignがない環境向け）\n",
+        "%env PYBUN_PYPI_NO_VERIFY=1\n",
+        "\n",
         "# PyBunをインストール\n",
         "!pip install -q pybun-cli\n",
         "\n",
