fix(notebook): use -t flag for Python cowsay package

--- a/examples/PyBun_Quick_Start.ipynb
+++ b/examples/PyBun_Quick_Start.ipynb
@@ -534,7 +534,7 @@
       "outputs": [],
       "source": [
         "# cowsayで挨拶（ネットワーク接続時のみ）\n",
-        "!pybun x cowsay -- \"Hello from PyBun!\""
+        "!pybun x cowsay -- -t \"Hello from PyBun!\""
       ]
     },
     {
